Added column in index.html for Seat Siv.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <th> Start Time </th>
             <th> Exam Title </th>
             <th> Room </th>
-            <th> Seat </th>
+            <th> Seat R </th>
+            <th> Seat Siv </th>
             <th> Duration </th>
             <th> Days left </th>
         </tr>
@@ -60,6 +61,7 @@
             <td> <a href="softeng.html"> LI Software Engineering 1 </a> </td>
             <td> Muirhead 121 </td>
             <td> 37 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="first"></p> </td>
         </tr>
@@ -70,6 +72,7 @@
             <td> <a href="models.html"> LI Models of Computation </a> </td>
             <td> New Gym </td>
             <td> 137 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="second"></p> </td>
         </tr>
@@ -80,6 +83,7 @@
             <td> LI Introductory Databases </td>
             <td> Avon Room </td>
             <td> 210 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="third"></p> </td>
         </tr>
@@ -90,6 +94,7 @@
             <td> LI Professional Computing </td>
             <td> Great Hall </td>
             <td> 141 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fourth"></p> </td>
         </tr>
@@ -100,6 +105,7 @@
             <td> LI Computer Systems and Architecture </td>
             <td> Sports Hall </td>
             <td> 332 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fifth"></p> </td>
         </tr>
@@ -110,6 +116,7 @@
             <td> <a href="cplusplus.html"> LI C/C++ </a> </td>
             <td> Arts Lecture Room 2 </td>
             <td> 39 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="sixth"></p> </td>
         </tr>
@@ -120,6 +127,7 @@
             <td> LI Graphics </td>
             <td> Muirhead 121 </td>
             <td> 42 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="seventh"></p> </td>
         </tr>
@@ -130,6 +138,7 @@
             <td> LI Math Techniques for Comp Sc </td>
             <td> New Gym </td>
             <td> 197 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="eighth"></p> </td>
         </tr>
@@ -140,6 +149,7 @@
             <td> LI Intro to Computer Security </td>
             <td> Avon Room </td>
             <td> 209 </td>
+            <td> Fill! </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ninth"></p> </td>
         </tr>
