--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <th> Exam Title </th>
             <th> Room </th>
             <th> Seat R </th>
-            <th> Seat Siv </th>
+            <th> Seat S </th>
             <th> Duration </th>
             <th> Days left </th>
         </tr>
@@ -61,9 +61,20 @@
             <td> <a href="softeng.html"> LI Software Engineering 1 </a> </td>
             <td> Muirhead 121 </td>
             <td> 37 </td>
-            <td> Fill! </td>
+            <td> - </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="first"></p> </td>
+        </tr>
+        <tr> <!-- Computational Vision -->
+            <td> Thursday </td>
+            <td> 04/05/2017 </td>
+            <td> 09:30 </td>
+            <td> <a href="vision.html">LI Computational Vision </a></td>
+            <td> Chemical Engineering 112 </td>
+            <td> - </td>
+            <td> 5 </td>
+            <td> 1:30hrs </td>
+            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
         <tr> <!-- Models of Computation -->
             <td> Friday </td>
@@ -72,7 +83,7 @@
             <td> <a href="models.html"> LI Models of Computation </a> </td>
             <td> New Gym </td>
             <td> 137 </td>
-            <td> Fill! </td>
+            <td> 21 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="second"></p> </td>
         </tr>
@@ -83,7 +94,7 @@
             <td> LI Introductory Databases </td>
             <td> Avon Room </td>
             <td> 210 </td>
-            <td> Fill! </td>
+            <td> 90 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="third"></p> </td>
         </tr>
@@ -94,7 +105,7 @@
             <td> LI Professional Computing </td>
             <td> Great Hall </td>
             <td> 141 </td>
-            <td> Fill! </td>
+            <td> 21 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fourth"></p> </td>
         </tr>
@@ -105,7 +116,7 @@
             <td> LI Computer Systems and Architecture </td>
             <td> Sports Hall </td>
             <td> 332 </td>
-            <td> Fill! </td>
+            <td> 216 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fifth"></p> </td>
         </tr>
@@ -116,7 +127,7 @@
             <td> <a href="cplusplus.html"> LI C/C++ </a> </td>
             <td> Arts Lecture Room 2 </td>
             <td> 39 </td>
-            <td> Fill! </td>
+            <td> 10 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="sixth"></p> </td>
         </tr>
@@ -127,18 +138,18 @@
             <td> LI Graphics </td>
             <td> Muirhead 121 </td>
             <td> 42 </td>
-            <td> Fill! </td>
+            <td> 11 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="seventh"></p> </td>
         </tr>
-        <tr> <!-- Matds -->
+        <tr> <!-- Maths -->
             <td> Wednesday </td>
             <td> 24/05/2017 </td>
             <td> 09:30 </td>
             <td> LI Math Techniques for Comp Sc </td>
             <td> New Gym </td>
             <td> 197 </td>
-            <td> Fill! </td>
+            <td> 92 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="eighth"></p> </td>
         </tr>
@@ -149,7 +160,7 @@
             <td> LI Intro to Computer Security </td>
             <td> Avon Room </td>
             <td> 209 </td>
-            <td> Fill! </td>
+            <td> 114 </td>
             <td> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ninth"></p> </td>
         </tr>
@@ -172,6 +183,19 @@
             document.getElementById("first").innerHTML = "<strong> DONE! </strong>";
         }
 
+        // Vision exam
+        var visionDate = new Date("May 4, 2017 09:30:00").getTime();
+        var visionDistance = visionDate - now;
+        var visionLeft = Math.floor(visionDistance / (1000 * 60 * 60 * 24));
+        document.getElementById("vision").innerHTML = visionLeft + "d ";
+        if (visionLeft < 1 && visionLeft >= 0) {
+            document.getElementById("vision").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
+        }
+        // If the count down is finished, write some text
+        else if (visionDistance < 0) {
+            document.getElementById("vision").innerHTML = "<strong> DONE! </strong>";
+        }
+
         // Second exam
         var secondDate = new Date("May 5, 2017 09:30:00").getTime();
         var secondDistance = secondDate - now;
@@ -181,7 +205,7 @@
             document.getElementById("second").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (secondDistance < 0) {
             document.getElementById("second").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -194,7 +218,7 @@
             document.getElementById("third").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (thirdDistance < 0) {
             document.getElementById("third").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -207,7 +231,7 @@
             document.getElementById("fourth").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (fourthDistance < 0) {
             document.getElementById("fourth").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -220,7 +244,7 @@
             document.getElementById("fifth").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (fifthDistance < 0) {
             document.getElementById("fifth").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -233,7 +257,7 @@
             document.getElementById("sixth").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (sixthDistance < 0) {
             document.getElementById("sixth").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -246,7 +270,7 @@
             document.getElementById("seventh").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (sevethDistance < 0) {
             document.getElementById("seventh").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -259,7 +283,7 @@
             document.getElementById("eighth").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (eighthDistance < 0) {
             document.getElementById("eighth").innerHTML = "<strong> DONE! </strong>";
         }
 
@@ -272,7 +296,7 @@
             document.getElementById("ninth").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
         // If the count down is finished, write some text
-        else if (firstDistance < 0) {
+        else if (ninthDistance < 0) {
             document.getElementById("ninth").innerHTML = "<strong> DONE! </strong>";
         }
 
