Added empty pages for remaining exams

--- a/graphics.html
+++ b/graphics.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Computational Vision </title>
+    <title> Graphics </title>
     <style type="text/css">
         body {
-            background-color: #ffe6b3;
+            background-color: #ccffcc;
             font-family: "Georgia", serif;
         }
 
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1> LI Computational Vision </h1>
+    <h1> LI Graphics </h1>
 
     <a href="index.html"> Back </a>
 </body>
