--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <td> Thursday </td>
             <td> 11/05/2017 </td>
             <td> 09:30 </td>
-            <td> LI Introductory Databases </td>
+            <td> <a href="databases.html"> LI Introductory Databases </a> </td>
             <td> Avon Room </td>
             <td> 210 </td>
             <td> 90 </td>
@@ -102,7 +102,7 @@
             <td> Friday </td>
             <td> 12/05/2017 </td>
             <td> 09:30 </td>
-            <td> LI Professional Computing </td>
+            <td> <a href="professionalcomputing.html"> LI Professional Computing </a> </td>
             <td> Great Hall </td>
             <td> 141 </td>
             <td> 21 </td>
@@ -113,7 +113,7 @@
             <td> Monday </td>
             <td> 15/05/2017 </td>
             <td> 09:30 </td>
-            <td> LI Computer Systems and Architecture </td>
+            <td> <a href="csa.html"> LI Computer Systems and Architecture </a> </td>
             <td> Sports Hall </td>
             <td> 332 </td>
             <td> 216 </td>
@@ -135,7 +135,7 @@
             <td> Tuesday </td>
             <td> 23/05/2017 </td>
             <td> 09:30 </td>
-            <td> LI Graphics </td>
+            <td> <a href="graphics.html">LI Graphics </a> </td>
             <td> Muirhead 121 </td>
             <td> 42 </td>
             <td> 11 </td>
@@ -146,7 +146,7 @@
             <td> Wednesday </td>
             <td> 24/05/2017 </td>
             <td> 09:30 </td>
-            <td> LI Math Techniques for Comp Sc </td>
+            <td> <a href="maths.html"> LI Math Techniques for Comp Sc </a> </td>
             <td> New Gym </td>
             <td> 197 </td>
             <td> 92 </td>
@@ -157,7 +157,7 @@
             <td> Friday </td>
             <td> 26/05/2017 </td>
             <td> 14:00 </td>
-            <td> LI Intro to Computer Security </td>
+            <td> <a href="security.html"> LI Intro to Computer Security </a> </td>
             <td> Avon Room </td>
             <td> 209 </td>
             <td> 114 </td>
