--- a/csa.html
+++ b/csa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Computational Vision </title>
+    <title> Computer Systems and Architecture </title>
     <style type="text/css">
         body {
             background-color: #ffe6b3;
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1> LI Computational Vision </h1>
+    <h1> LI Computer Systems and Architecture </h1>
 
     <a href="index.html"> Back </a>
 </body>
