--- a/index.html
+++ b/index.html
@@ -57,111 +57,111 @@
         <tr> <!-- Software Engineering 1 -->
             <td> Tuesday </td>
             <td> 02/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="softeng.html"> LI Software Engineering 1 </a> </td>
             <td> Muirhead 121 </td>
-            <td> 37 </td>
-            <td> - </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 37 </td>
+            <td align="center"> - </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="first"></p> </td>
         </tr>
         <tr> <!-- Computational Vision -->
             <td> Thursday </td>
             <td> 04/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="vision.html">LI Computational Vision </a></td>
             <td> Chemical Engineering 112 </td>
-            <td> - </td>
-            <td> 5 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> - </td>
+            <td align="center"> 5 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
         <tr> <!-- Models of Computation -->
             <td> Friday </td>
             <td> 05/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="models.html"> LI Models of Computation </a> </td>
             <td> New Gym </td>
-            <td> 137 </td>
-            <td> 21 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 137 </td>
+            <td align="center"> 21 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="second"></p> </td>
         </tr>
         <tr> <!-- Introductory Databases -->
             <td> Thursday </td>
             <td> 11/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="databases.html"> LI Introductory Databases </a> </td>
             <td> Avon Room </td>
-            <td> 210 </td>
-            <td> 90 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 210 </td>
+            <td align="center"> 90 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="third"></p> </td>
         </tr>
         <tr> <!-- Professional Computing -->
             <td> Friday </td>
             <td> 12/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="professionalcomputing.html"> LI Professional Computing </a> </td>
             <td> Great Hall </td>
-            <td> 141 </td>
-            <td> 21 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 141 </td>
+            <td align="center"> 21 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fourth"></p> </td>
         </tr>
         <tr> <!-- Computer Systems and Architecture -->
             <td> Monday </td>
             <td> 15/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="csa.html"> LI Computer Systems and Architecture </a> </td>
             <td> Sports Hall </td>
-            <td> 332 </td>
-            <td> 216 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 332 </td>
+            <td align="center"> 216 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="fifth"></p> </td>
         </tr>
         <tr> <!-- C/C++ -->
             <td> Thursday </td>
             <td> 18/05/2017 </td>
-            <td> 14:00 </td>
+            <td align="center"> 14:00 </td>
             <td> <a href="cplusplus.html"> LI C/C++ </a> </td>
             <td> Arts Lecture Room 2 </td>
-            <td> 39 </td>
-            <td> 10 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 39 </td>
+            <td align="center"> 10 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="sixth"></p> </td>
         </tr>
         <tr> <!-- Graphics -->
             <td> Tuesday </td>
             <td> 23/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="graphics.html">LI Graphics </a> </td>
             <td> Muirhead 121 </td>
-            <td> 42 </td>
-            <td> 11 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 42 </td>
+            <td align="center"> 11 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="seventh"></p> </td>
         </tr>
         <tr> <!-- Maths -->
             <td> Wednesday </td>
             <td> 24/05/2017 </td>
-            <td> 09:30 </td>
+            <td align="center"> 09:30 </td>
             <td> <a href="maths.html"> LI Math Techniques for Comp Sc </a> </td>
             <td> New Gym </td>
-            <td> 197 </td>
-            <td> 92 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 197 </td>
+            <td align="center"> 92 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="eighth"></p> </td>
         </tr>
         <tr> <!-- Intro to Computer Security -->
             <td> Friday </td>
             <td> 26/05/2017 </td>
-            <td> 14:00 </td>
+            <td align="center"> 14:00 </td>
             <td> <a href="security.html"> LI Intro to Computer Security </a> </td>
             <td> Avon Room </td>
-            <td> 209 </td>
-            <td> 114 </td>
-            <td> 1:30hrs </td>
+            <td align="center"> 209 </td>
+            <td align="center"> 114 </td>
+            <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ninth"></p> </td>
         </tr>
     </table>
