Index: karin on board cpp: typos fixed

--- a/cplusplus.html
+++ b/cplusplus.html
@@ -85,7 +85,7 @@ Table of Contents
 <hr/>
 
 <h2 id="introduction"> Introduction </h2>
-<p> Comparing C, C++ and Java. <br/> They all have core imperative langauge that includes assignment
+<p> Comparing C, C++ and Java. <br/> They all have core imperative language that includes assignment
 while, functions and recursion. </p>
 <ul>
     <li> C <ul>
