--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <th> Room </th>
             <th> Seat R </th>
             <th> Seat S </th>
+            <th> Seat K </th>
             <th> Duration </th>
             <th> Days left </th>
         </tr>
@@ -62,6 +63,7 @@
             <td> Muirhead 121 </td>
             <td align="center"> 37 </td>
             <td align="center"> - </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
         </tr>
@@ -73,6 +75,7 @@
             <td> Chemical Engineering 112 </td>
             <td align="center"> - </td>
             <td align="center"> 5 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
@@ -84,6 +87,7 @@
             <td> New Gym </td>
             <td align="center"> 137 </td>
             <td align="center"> 21 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
         </tr>
@@ -95,6 +99,7 @@
             <td> Avon Room </td>
             <td align="center"> 210 </td>
             <td align="center"> 90 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
@@ -106,6 +111,7 @@
             <td> Great Hall </td>
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
         </tr>
@@ -117,6 +123,7 @@
             <td> Sports Hall </td>
             <td align="center"> 332 </td>
             <td align="center"> 216 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
@@ -128,6 +135,7 @@
             <td> Arts Lecture Room 2 </td>
             <td align="center"> 39 </td>
             <td align="center"> 10 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
         </tr>
@@ -139,6 +147,7 @@
             <td> Muirhead 121 </td>
             <td align="center"> 42 </td>
             <td align="center"> 11 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
@@ -150,6 +159,7 @@
             <td> New Gym </td>
             <td align="center"> 197 </td>
             <td align="center"> 92 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
         </tr>
@@ -161,6 +171,7 @@
             <td> Avon Room </td>
             <td align="center"> 209 </td>
             <td align="center"> 114 </td>
+            <td align="center"> Fill! </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
         </tr>
@@ -174,7 +185,7 @@
         var softEngDate = new Date("May 2, 2017 09:30:00").getTime();
         var softEngDistance = softEngDate - now;
         var softEngLeft = Math.floor(softEngDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("softEng").innerHTML = softEngLeft + "d ";
+        document.getElementById("softEng").innerHTML = softEngLeft + "d";
         if (softEngLeft < 1 && softEngLeft >= 0) {
             document.getElementById("softEng").innerHTML = "<strong> TOMORROW! </strong> <br/> Pray and do your best!";
         }
@@ -187,7 +198,7 @@
         var visionDate = new Date("May 4, 2017 09:30:00").getTime();
         var visionDistance = visionDate - now;
         var visionLeft = Math.floor(visionDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("vision").innerHTML = visionLeft + "d ";
+        document.getElementById("vision").innerHTML = visionLeft + "d";
         if (visionLeft < 1 && visionLeft >= 0) {
             document.getElementById("vision").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -200,7 +211,7 @@
         var modelsDate = new Date("May 5, 2017 09:30:00").getTime();
         var modelsDistance = modelsDate - now;
         var modelsLeft = Math.floor(modelsDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("models").innerHTML = modelsLeft + "d ";
+        document.getElementById("models").innerHTML = modelsLeft + "d";
         if (modelsLeft < 1 && modelsLeft >= 0) {
             document.getElementById("models").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -213,7 +224,7 @@
         var databasesDate = new Date("May 11, 2017 09:30:00").getTime();
         var databasesDistance = databasesDate - now;
         var databasesLeft = Math.floor(databasesDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("databases").innerHTML = databasesLeft + "d ";
+        document.getElementById("databases").innerHTML = databasesLeft + "d";
         if (databasesLeft < 1 && databasesLeft >= 0) {
             document.getElementById("databases").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -226,7 +237,7 @@
         var profCompDate = new Date("May 12, 2017 09:30:00").getTime();
         var profCompDistance = profCompDate - now;
         var profCompLeft = Math.floor(profCompDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("profComp").innerHTML = profCompLeft + "d ";
+        document.getElementById("profComp").innerHTML = profCompLeft + "d";
         if (profCompLeft < 1 && profCompLeft >= 0) {
             document.getElementById("profComp").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -239,7 +250,7 @@
         var csaDate = new Date("May 15, 2017 09:30:00").getTime();
         var csaDistance = csaDate - now;
         var csaLeft = Math.floor(csaDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("csa").innerHTML = csaLeft + "d ";
+        document.getElementById("csa").innerHTML = csaLeft + "d";
         if (csaLeft < 1 && csaLeft >= 0) {
             document.getElementById("csa").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -252,7 +263,7 @@
         var ccppDate = new Date("May 18, 2017 14:00:00").getTime();
         var ccppDistance = ccppDate - now;
         var ccppLeft = Math.floor(ccppDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("ccpp").innerHTML = ccppLeft + "d ";
+        document.getElementById("ccpp").innerHTML = ccppLeft + "d";
         if (ccppLeft < 1 && ccppLeft >= 0) {
             document.getElementById("ccpp").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -265,7 +276,7 @@
         var graphicsDate = new Date("May 23, 2017 09:30:00").getTime();
         var graphicsDistance = graphicsDate - now;
         var graphicsLeft = Math.floor(graphicsDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("graphics").innerHTML = graphicsLeft + "d ";
+        document.getElementById("graphics").innerHTML = graphicsLeft + "d";
         if (graphicsLeft < 1 && graphicsLeft >= 0) {
             document.getElementById("graphics").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -278,7 +289,7 @@
         var mathsDate = new Date("May 24, 2017 09:30:00").getTime();
         var mathsDistance = mathsDate - now;
         var mathsLeft = Math.floor(mathsDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("maths").innerHTML = mathsLeft + "d ";
+        document.getElementById("maths").innerHTML = mathsLeft + "d";
         if (mathsLeft < 1 && mathsLeft >= 0) {
             document.getElementById("maths").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
@@ -291,7 +302,7 @@
         var securityDate = new Date("May 26, 2017 14:00:00").getTime();
         var securityDistance = securityDate - now;
         var securityLeft = Math.floor(securityDistance / (1000 * 60 * 60 * 24));
-        document.getElementById("security").innerHTML = securityLeft + "d ";
+        document.getElementById("security").innerHTML = securityLeft + "d";
         if (securityLeft < 1 && securityLeft >= 0) {
             document.getElementById("security").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
         }
